# IEOR4576-Project2

./: .gcloudignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
app/: main.py  schemas.py
app/agents/: collector.py  eda.py  hypothesis.py  orchestrator.py
app/tools/: api_tool.py  sql_tool.py  stats_tool.py  viz_tool.py
data/: build_db.py  market.duckdb  test.py
eval/: dataset.jsonl  run_eval.py
static/: index.html
