[project]
name = "stock-analyst-ai"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "google-adk>=1.11.0",
    "google-genai>=1.0.0",
    "duckdb>=0.10.0",
    "yfinance>=0.2.38",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "pydantic>=2.7.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]